kqed_dev4/src/objects/SFDC_Test_Case__c.object
<CustomObject>
    <description>Test Cases outline specific prerequisites for certain testing scenarios, and their expected results.</description>
    <fields>
        <fullName>Bug__c</fullName>
        <label>Bug</label>
        <referenceTo>SFDC_Bug__c</referenceTo>
        <relationshipName>R00N50000001QGnyEAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <label>Component</label>
        <referenceTo>SFDC_Component__c</referenceTo>
        <relationshipName>R00N50000001QGo1EAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_Results__c</fullName>
        <label>Expected Results</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Planned_Staff_Time__c</fullName>
        <label>Staff Time(Hours)</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prerequisites_and_Initial_Conditions__c</fullName>
        <label>Prerequisites and Initial Conditions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Tested</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Not Covered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Run</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Description_and_Steps__c</fullName>
        <label>Test Description and Steps</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Phase__c</fullName>
        <label>Test Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Component</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Type__c</fullName>
        <label>Test Type</label>
        <picklist>
            <picklistValues>
                <fullName>Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compatability</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Test Case</label>
    <listViews>
        <fullName>AllTestCases</fullName>
        <columns>NAME</columns>
        <columns>Component__c</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Test Cases</label>
    </listViews>
    <nameField>
        <displayFormat>TC-{0000}</displayFormat>
        <label>Test Case #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Cases</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>